--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ transition : background 0.3s ease-in-out , color 0.6s ease-in-out;
 
 .progress-bar {
   height: 5px;
-  background: var(--primary);
+  background-color: yellow;
   margin-top: 20px;
 }
 
